# dreamchain-mono-repo

./: README.md
DreamChainCore/: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md
DreamChainCore/plugins/faucet_testnet_plugin/: faucet_testnet_plugin.cpp
DreamChainCore/programs/cleos/: main.cpp
DreamChainCore/scripts/node/: automated_start.sh  clean.sh  genesis_start.sh  hard_start.sh  start.sh
DreamChainCore/tests/: consensus-validation-malicious-producers.py  version-label.sh
DreamChainCore/unittests/: abi_tests.cpp
NFT-Contracts/: CMakeLists.txt  Makefile  README.md  dGoods_spec_中文.md  dgoods_spec.md  example_usage.md
NFT-Contracts/include/: dreamoji.hpp  service.hpp
NFT-Contracts/ricardian/: dreamoji.contracts.md
NFT-Contracts/src/: CMakeLists.txt  dreamoji.cpp
dreamium-sharp/: .gitignore  README.md
dreamium-sharp/DrmSharp/: DrmSharp.sln
dreamium-sharp/DrmSharp/DrmSharp.UnitTests/: ApiUnitTests.cs  ApiUnitTests.tt  DrmSharp.UnitTests.csproj  DrmUnitTests.cs  (+7 more)
dreamium-sharp/DrmSharp/DrmSharp.UnitTests.Core/: ApiUnitTestCases.cs  DrmSharp.UnitTests.Core.csproj  DrmTestCasesDef.t4  DrmUnitTestCases.cs  SerializationUnitTestCases.cs
wallet/: CONTRIBUTION.MD  README.md  angular.json  karma.conf.js  package-lock.json  package.json
wallet-web/: .gitignore  .travis.yml  Dockerfile  Dockerrun.aws.json  angular.json  package-lock.json  package.json  tslint.json
wallet-web/src/: button.styles.scss  index.html  input.style.scss  main.ts  page-container.styles.scss  styles.scss  variable.scss
wallet/src/: index.html  styles.css
(+198 files in other folders)
